Fixed visibility-icon

--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -85,7 +85,9 @@ body{
   align-items: center;
   gap: 20px;
   margin-right: 80px;
+  transition: color 0.3s ease;
 }
+
 
 .nav-icon {
   color: white;
@@ -149,7 +151,6 @@ body{
 
 
 .main-content {
-  /* margin-left: 240px;      */
   padding-top: 88px;      
   min-height: 100vh;
   display: block;
@@ -169,4 +170,8 @@ body{
   flex: 1;
   margin-left: 0;      
   padding-left: 0;     
+}
+
+.nav-icon:hover{
+  color: rgb(40, 182, 12);
 }
